Update rkhunter rules
There is new rules and small adjustments
to be done in rkhunter whitelist rules

--- a/etc/rkhunter.d/01-lynis-audit-opensuse.conf
+++ b/etc/rkhunter.d/01-lynis-audit-opensuse.conf
@@ -13,10 +13,4 @@ ALLOWHIDDENDIR=/etc/.hg
 ALLOWHIDDENDIR=/etc/.svn
 ALLOWHIDDENDIR=/etc/.git
 ALLOWHIDDENFILE=/etc/.*keeper
-
-# FIPS file can be located also here
-ALLOWHIDDENFILE=/usr/bin/.fipscheck.hmac
-
-# Some MAN files that are hidden (krb5-client)
-ALLOWHIDDENFILE=/usr/share/man/man5/.k5login.5.gz
-ALLOWHIDDENFILE=/usr/share/man/man5/.k5identity.5.gz
+ALLOWHIDDENFILE=/etc/.*ignore
