--- a/etc/sysctl.d/lynis-audit-opensuse.conf
+++ b/etc/sysctl.d/lynis-audit-opensuse.conf
@@ -1,7 +1,13 @@
+dev.tty.ldisc_autoload = 0
+fs.protected_fifos = 2
+fs.protected_regular = 2
 kernel.core_uses_pid = 1
 kernel.dmesg_restrict = 1
 kernel.kptr_restrict = 2
+kernel.perf_event_paranoid = 3
 kernel.sysrq = 0
+kernel.unprivileged_bpf_disabled = 1
+net.core.bpf_jit_harden = 2
 net.ipv4.conf.all.accept_redirects = 0
 net.ipv4.conf.all.log_martians = 1
 net.ipv4.conf.all.send_redirects = 0
@@ -11,3 +17,29 @@ net.ipv4.conf.default.log_martians = 1
 net.ipv6.conf.all.accept_redirects = 0
 net.ipv6.conf.default.accept_redirects = 0
 
+# https://wiki.archlinux.org/title/High_Performance_Firewall
+net.ipv4.neigh.default.gc_thresh1 = 512
+net.ipv4.neigh.default.gc_thresh2 = 1024
+net.ipv4.neigh.default.gc_thresh3 = 2048
+net.netfilter.nf_conntrack_max = 1048576
+
+# https://serverfault.com/questions/157027/sysctl-config-for-high-performance-large-activity
+net.ipv4.tcp_sack=1
+net.ipv4.tcp_timestamps=1
+net.ipv4.tcp_wmem = 4096 65536 4194304
+net.ipv4.tcp_rmem = 4096 87380 4194304
+
+net.ipv4.tcp_fin_timeout = 1
+net.ipv4.tcp_tw_recycle = 1
+net.core.wmem_max = 16777216
+net.core.rmem_max = 16777216
+net.core.wmem_default = 16777216
+net.core.rmem_default = 16777216
+net.core.netdev_max_backlog = 262144
+net.core.somaxconn = 262144
+
+net.ipv4.tcp_syncookies = 0
+net.ipv4.tcp_max_orphans = 262144
+net.ipv4.tcp_max_syn_backlog = 262144
+net.ipv4.tcp_synack_retries = 2
+net.ipv4.tcp_syn_retries = 2
