Rename rkhunter filename
Rename (again) rkhunter filename to
make sure they are in-line with other
conf files

--- a/etc/rkhunter.d/99-rkhunter-lynis.conf
+++ b/etc/rkhunter.d/99-rkhunter-lynis.conf
@@ -1,10 +1,10 @@
-# /etc/rkhunter.d/01-lynis-audit-opensuse.conf
+# /etc/rkhunter.d/99-rkhunter-lynis.conf
 #
 # White list some files that gives false positives
 #
 
 # Get ourselves checked.
-USER_FILEPROP_FILES_DIRS=/etc/rkhunter.d/01-lynis-audit-opensuse.conf
+USER_FILEPROP_FILES_DIRS=/etc/rkhunter.d/99-rkhunter-lynis.conf
 
 APPEND_LOG=1
 
