Add file names to comments
Add file names as comments if
there files are get separated from the
place where they should be

--- a/etc/modprobe.d/50-lynis-blacklist.conf
+++ b/etc/modprobe.d/50-lynis-blacklist.conf
@@ -1,3 +1,5 @@
+# /etc/modprobe.d/50-lynis-blacklist.conf
+
 # Lynis doens't like these modules so you should not eather
 blacklist cramfs
 blacklist freevxfs
